--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=Films
+# URL ??? ??????????? ? ???? ??????
+spring.datasource.url=jdbc:mysql://localhost:3306/films
+
+# ??? ???????????? ???? ??????
+spring.datasource.username=root
+
+# ?????? ???????????? ???? ??????
+spring.datasource.password=root
+
+# ??????? JDBC ??? MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ????????? ?????????? ?????? ???? ?????? (update, create, create-drop, validate, none)
+spring.jpa.hibernate.ddl-auto=update
+
+# ???????? SQL-??????? ? ???????
+spring.jpa.show-sql=true
+
+# ????????????? SQL-??????? ??? ?????? ?????????? (???????????)
+spring.jpa.properties.hibernate.format_sql=true
+
+# ??????? Hibernate ??? MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
