--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.application.name=Films
 # URL ??? ??????????? ? ???? ??????
 spring.datasource.url=jdbc:mysql://localhost:3306/films
